Fixed a ton of shit
Checkbox, buttons and scrolls

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#8c9eff</color>
     <color name="colorPrimaryDark">#536dfe</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="checked">#64dd17</color>
 </resources>
