--- a/app/src/main/res/layout/activity_recepta.xml
+++ b/app/src/main/res/layout/activity_recepta.xml
@@ -17,6 +17,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,6 +71,10 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     >
+                    <ScrollView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/scrollView" >
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -79,6 +85,7 @@
                         android:id="@+id/hranaDisc"
                         android:textSize="20sp"
                         android:gravity="left" />
+                    </ScrollView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -86,6 +93,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+                    <ScrollView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/scrollView2" >
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -96,6 +107,7 @@
                         android:id="@+id/hranaDisc2"
                         android:textSize="20sp"
                         android:gravity="left" />
+                    </ScrollView>
                 </LinearLayout>
 
             </FrameLayout>
