Slight code upgrade (doestn wokr)
Made the code a bit clearer and better working

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,22 +18,25 @@
         android:layout_height="150dp"
         android:id="@+id/helb"
         android:src="@drawable/hleb"
+        android:layout_marginBottom="5dp"
         android:onClick="PressMeHleb"
         android:scaleType="fitXY"
         android:background="@null"
         android:longClickable="false"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-
+        android:layout_marginLeft="20dp"
         android:nestedScrollingEnabled="false" />
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/tomato"
+        android:layout_marginRight="20dp"
         android:onClick="PressMeTomato"
         android:src="@drawable/tomato"
         android:scaleType="fitXY"
         android:longClickable="false"
+        android:layout_marginBottom="5dp"
         android:background="@null"
         android:layout_below="@+id/sir"
         android:layout_alignStart="@+id/sir"
@@ -43,8 +46,10 @@
         android:layout_height="150dp"
         android:id="@+id/sir"
         android:src="@drawable/sir"
+        android:layout_marginRight="20dp"
         android:onClick="PressMeSir"
         android:scaleType="fitXY"
+        android:layout_marginBottom="5dp"
         android:longClickable="false"
         android:layout_alignParentTop="true"
         android:background="@null"
@@ -55,7 +60,9 @@
         android:layout_height="150dp"
         android:id="@+id/kash"
         android:src="@drawable/kash"
+        android:layout_marginLeft="20dp"
         android:onClick="PressMeKash"
+        android:layout_marginBottom="5dp"
         android:longClickable="false"
         android:scaleType="fitXY"
         android:background="@null"
@@ -70,6 +77,7 @@
         android:longClickable="false"
         android:scaleType="fitXY"
         android:background="@null"
+        android:layout_marginLeft="20dp"
         android:onClick="PressMeMilk"
         android:layout_below="@+id/kash"
         android:layout_alignParentStart="true"
@@ -78,6 +86,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@null"
+        android:layout_marginRight="20dp"
         android:id="@+id/qco"
         android:src="@drawable/qco"
         android:longClickable="false"
@@ -86,14 +95,16 @@
         android:layout_below="@+id/tomato"
         android:layout_alignStart="@+id/tomato"
          />
-    <Button
-        android:layout_height="70dp"
+    <ImageButton
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:layout_marginTop="30dp"
-        android:text="@string/start_search"
-        android:background="@color/colorPrimaryDark"
+        android:src="@drawable/but"
+        android:scaleType="fitXY"
+        android:background="@null"
+        android:id="@+id/but"
         android:onClick="startSearch"
         android:layout_below="@+id/mill"
         android:layout_centerHorizontal="true" />
