--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
     tools:context="com.odezsa.konik.neobaba.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
+<!--
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -94,18 +94,27 @@
         android:scaleType="fitXY"
         android:layout_below="@+id/tomato"
         android:layout_alignStart="@+id/tomato"
-         />
+         /> -->
     <ImageButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_width="50dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="49dp"
         android:src="@drawable/but"
         android:scaleType="fitXY"
         android:background="@null"
         android:id="@+id/but"
         android:onClick="startSearch"
-        android:layout_below="@+id/mill"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/search"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
