--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,12 +13,12 @@
     tools:context="com.odezsa.konik.neobaba.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-<!--
+
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/helb"
-        android:src="@drawable/hleb"
+        android:src="@drawable/button_hleb"
         android:layout_marginBottom="5dp"
         android:onClick="PressMeHleb"
         android:scaleType="fitXY"
@@ -34,7 +34,7 @@
         android:id="@+id/tomato"
         android:layout_marginRight="20dp"
         android:onClick="PressMeTomato"
-        android:src="@drawable/tomato"
+        android:src="@drawable/button_domat"
         android:scaleType="fitXY"
         android:longClickable="false"
         android:layout_marginBottom="5dp"
@@ -46,7 +46,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/sir"
-        android:src="@drawable/sir"
+        android:src="@drawable/button_sirene"
         android:layout_marginRight="20dp"
         android:onClick="PressMeSir"
         android:scaleType="fitXY"
@@ -60,7 +60,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/kash"
-        android:src="@drawable/kash"
+        android:src="@drawable/button_cheese"
         android:layout_marginLeft="20dp"
         android:onClick="PressMeKash"
         android:layout_marginBottom="5dp"
@@ -74,7 +74,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/mill"
-        android:src="@drawable/milk"
+        android:src="@drawable/button_milk"
         android:longClickable="false"
         android:scaleType="fitXY"
         android:background="@null"
@@ -89,20 +89,19 @@
         android:background="@null"
         android:layout_marginRight="20dp"
         android:id="@+id/qco"
-        android:src="@drawable/qco"
+        android:src="@drawable/button_egg"
         android:longClickable="false"
         android:onClick="PressMeQco"
         android:scaleType="fitXY"
         android:layout_below="@+id/tomato"
         android:layout_alignStart="@+id/tomato"
-         /> -->
+         />
     <ImageButton
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:layout_marginBottom="49dp"
-        android:layout_below="@id/layout6"
+        android:layout_below="@id/mill"
         android:src="@drawable/but"
         android:scaleType="fitXY"
         android:background="@null"
