--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -101,13 +101,13 @@
         android:layout_width="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:layout_below="@id/mill"
+        android:layout_marginTop="30dp"
         android:src="@drawable/but"
         android:scaleType="fitXY"
         android:background="@null"
         android:id="@+id/but"
         android:onClick="startSearch"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/mill"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
