--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -6,12 +6,15 @@
         <ImageView
             android:id="@+id/img"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"/>
 
         <TextView
             android:id="@+id/txt"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:textSize="20sp"/>
 
     </TableRow>
 </TableLayout>
